--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "CV",
+  "name": "portfolio",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -7,7 +7,18 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "lite-server"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://gitlab.com/alexeisviscaino/portfolio.git"
+  },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "bugs": {
+    "url": "https://gitlab.com/alexeisviscaino/portfolio/issues"
+  },
+  "homepage": "https://gitlab.com/alexeisviscaino/portfolio#readme",
+  "dependencies": {
+    "lite-server": "^2.5.3"
+  }
 }
